--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,8 +1,8 @@
 # Sample localization file for English. Add more files in this directory for other locales.
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
-en:
+fr:
   hello: "Hello world"
-
+  
   user:
-    login_in: "Log in"
+    login_in: "Se connecter"
