--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2,6 +2,11 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 fr:
+  edit: "Editer"
+  destroy: "Supprimer"
+  show: "Voir"
+  confirmation: "Etes-vous sûr?"
+  
   user:
     login_in: "Se connecter"
 
